objects/TXC_TaxCertificates_ARG__c.object
<CustomObject>
    <fields>
        <fullName>Amount_AR__c</fullName>
        <description>Withholding tax Amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AplicationsTXTissued_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the process to generate TXT file has ended</description>
        <label>Withholding TXT issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment_AR__c</fullName>
        <description>Free text to add any comment</description>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_AR__c</fullName>
        <description>Date of certificate</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateRate_AR__c</fullName>
        <description>Tax Rate</description>
        <label>Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_AR__c</fullName>
        <formula>(Amount_AR__c / TaxableAmount_AR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate_AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReceiptNo_AR__c</fullName>
        <description>Receipt Number</description>
        <label>Receipt No.</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipName>Tax_Certificates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaxableAmount_AR__c</fullName>
        <description>Taxable Amount</description>
        <label>Taxable Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValueType_AR__c</fullName>
        <description>Whithhold tax certificate type</description>
        <label>Whithhold Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NOT USED</fullName>
                </value>
                <value>
                    <fullName>IIBBBA</fullName>
                </value>
                <value>
                    <fullName>IIBBCAT</fullName>
                </value>
                <value>
                    <fullName>IIBBCF</fullName>
                </value>
                <value>
                    <fullName>IIBBCHA</fullName>
                </value>
                <value>
                    <fullName>IIBBCHU</fullName>
                </value>
                <value>
                    <fullName>IIBBCOR</fullName>
                </value>
                <value>
                    <fullName>IIBBCTES</fullName>
                </value>
                <value>
                    <fullName>IIBBER</fullName>
                </value>
                <value>
                    <fullName>IIBBFOR</fullName>
                </value>
                <value>
                    <fullName>IIBBJU</fullName>
                </value>
                <value>
                    <fullName>IIBBLP</fullName>
                </value>
                <value>
                    <fullName>IIBBLR</fullName>
                </value>
                <value>
                    <fullName>IIBBMIS</fullName>
                </value>
                <value>
                    <fullName>IIBBMZA</fullName>
                </value>
                <value>
                    <fullName>IIBBNEU</fullName>
                </value>
                <value>
                    <fullName>IIBBRN</fullName>
                </value>
                <value>
                    <fullName>IIBBSA</fullName>
                </value>
                <value>
                    <fullName>IIBBSC</fullName>
                </value>
                <value>
                    <fullName>IIBBSE</fullName>
                </value>
                <value>
                    <fullName>IIBBSF</fullName>
                </value>
                <value>
                    <fullName>IIBBSJ</fullName>
                </value>
                <value>
                    <fullName>IIBBSL</fullName>
                </value>
                <value>
                    <fullName>IIBBTDF</fullName>
                </value>
                <value>
                    <fullName>IIBBTUC</fullName>
                </value>
                <value>
                    <fullName>RETGAN</fullName>
                </value>
                <value>
                    <fullName>RETIVA</fullName>
                </value>
                <value>
                    <fullName>RETMUCBA</fullName>
                </value>
                <value>
                    <fullName>RETSUSS</fullName>
                </value>
                <value>
                    <fullName>SEGURIDAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WithhRecordedinJDE_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the Certificate has been recorded in JDE (by TXT file batch process)</description>
        <label>Withh recorded in JDE</label>
        <type>Checkbox</type>
    </fields>
    <label>LAT Tax Certificate</label>
    <nameField>
        <label>Certificate No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Tax Certificates</pluralLabel>
    <recordTypes>
        <fullName>TXC_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>TXC_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TXC_VR01_NameLengthValidation_AR</fullName>
        <active>true</active>
        <description>&apos;Certificate No.&apos; length cannot be greater than 8.</description>
        <errorConditionFormula>NOT(ISBLANK(Name)) &amp;&amp; LEN(Name) &gt; 8</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot enter a Certificate No. with more than 8 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TXC_VR02_ValueTypeValidation_AR</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $Profile.Name=&apos;AR_System Administrator&apos;) &amp;&amp; 
NOT( $Profile.Name=&apos;System Administrator&apos;) &amp;&amp;
NOT( $Profile.Name=&apos;LAT_SystemAdministrator&apos;) &amp;&amp;
(
ISPICKVAL( ValueType_AR__c , &apos;IN&apos;) ||
ISPICKVAL( ValueType_AR__c , &apos;IS&apos;) || 
ISPICKVAL( ValueType_AR__c , &apos;IT&apos;) || 
ISPICKVAL( ValueType_AR__c , &apos;RT&apos;)
 )</errorConditionFormula>
        <errorMessage>PRA is exempt from withholding selected, the amount paid by the customer less arguing that plea must be claimed and remain as current account balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TXC_VR03_AmountValidation_AR</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_AR__c &lt;=0</errorConditionFormula>
        <errorDisplayField>Amount_AR__c</errorDisplayField>
        <errorMessage>You can not enter an amount less than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>